styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');

*{
    margin: 0;
    padding: 0;
}

body{
    font-family: 'Roboto', sans-serif;
}

a{
    text-decoration: none;
}

.pl-10{
    padding-left: 5px;
}

#hero-banner {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    margin: 20px 75px;
    padding: 0 20px;
    background: #007ac1;
    border-radius: 25px;
}

.tagline {
    width: 450px;
    font-size: 55px;
    padding: 20px;
    color: #ffffff;
}

.about {
    width: 600px;
    padding: 20px;
    color: #ffffff;
    margin-bottom: 20px;
    text-align: justify;
}

.btn {
    margin: 50px 20px;
    padding: 15px 40px ;
    background: #005662;
    color: #ffffff;
    border-radius: 10px;
    border: 1px solid #005662;
}

.hero-image{
    display: flex;
    flex-direction: row;
}

.hero-image img{
    height: 420px;
}

/* Blog Section */
.blog-section {
    display: flex;
    justify-content: center;
    padding: 30px 100px;
}

.blog-menu {
    display: flex;
    flex-direction: column;
    background: #000;
    justify-content: center;
    border-radius: 5px;
    margin-right: 20px;
    height: 250px;
    margin-top: 10px;
}

.blog-menu-item {
    display: flex;
    justify-content: center;
    color: #000;
    padding: 10px 40px;
    margin: 15px;
    background: #ffffff;
    border-radius: 8px;
}

.selected {
    color: #ffffff;
    background: #DD0000;
}

.matchs{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 10px;
}

.match-item{
    display: flex;
    flex-direction: column;
    border: 1px solid #16161633;
    border-radius: 10px;
    margin-top: 10px;
}

.tag{
    border: 1px solid black;
    width: 100px;
    text-align: center;
    margin: 10px;
    border-radius: 5px;
    padding: 5px;
}

.social{
    display: flex;
    padding: 10px;
}
h4{
    padding: 0 10px;
}

p, i{
    color: #161616;
    opacity: 80%;
    padding: 0 10px;
}

a{
    width: 130px;
}


footer{
    background: #161616;
    height: 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

footer h1{
    color: #fff;
    text-align: center;
    padding: 10px;
}

footer hr {
    background: #fff;
    opacity: 10%;
    width: 80%;
}

footer ul{
    color: #fff;
    list-style: none;
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
    width: 700px;
}


/* Match */
.next-match{
    display: flex;
    align-items: center;
}

.next-match-image{
    width: 50px;
    height: 50px;
}

.new-match{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    border: 1px solid #161616;
    
}

@media only screen and (max-width: 810px) {
    #hero-banner {
	margin: 20px;
    }
    .hero-image img{
	height: 300px;
	padding:  20px 0;
    }
    
    .tagline {
	width: 250px;
	font-size: 30px;
	padding: 10px;
    }
    
    .about {
	width: 260px;
	padding: 10px;
	margin-bottom: 20px;
	font-size: 14px;
    }
    .btn {
	margin: 0 10px;
	padding: 10px 30px ;
	border-radius: 5px;
	border: 1px solid #005662;
    }
    /* Blog Section */
    .blog-section {
	flex-direction: column;
	padding: 10px;
    }

    .blog-menu {
	flex-direction: row;
	background: #fff;
	margin-right: 0;
	height: 100%;
    }
    
    a{
	width: 130px;
	border: 1px solid #16161633;
    }

    .match-item{
	margin-top: 10px;
    }
    
    .matchs{
	grid-template-columns: repeat(2, 1fr);
	column-gap: 20px;
	padding: 0 30px;
    }

}

@media only screen and (max-width: 412px) {
    #hero-banner{
	flex-direction: column;
	justify-content: center;
    }

    .text-section{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
    }
    
    .tagline {
	margin-top: 40px;
	font-size: 35px;
	text-align: center;
    }
    .about {
	text-align: center;
    }
    .btn{
	display: flex;
	justify-content: center;
    }
    /* Blog Section */
    .blog-menu {
	flex-direction: column;
	align-items: center;
    }
    
    .matchs{
	grid-template-columns: repeat(1, 1fr);
	column-gap: 20px;
	padding: 0 30px;
    }
    footer {
	height: 100%;
    }
    footer ul{
	flex-direction: column;
	text-align: center;
    }
    footer li {
	padding: 10px;
    }
}

